# soraPlayer

./: .gitignore  LICENSE  README.md  pubspec.yaml  tree.txt
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/soraplayer/: MainActivity.kt
android/app/src/main/kotlin/com/example/soraplayer02/: MainActivity.kt
lib/: main.dart
lib/constants/: app_gradients.dart
lib/models/: fftdata.dart  fftframe.dart  gradient_color.dart  loop_mode.dart  song.dart
lib/services/: PaletteService.dart  audio_metadata_reader.dart  audio_reader_service.dart  fft_analyzer_service.dart  mp3_decoder_ffi.dart  pcm_decoder_service.dart
lib/view_models/: play_viewmodel.dart
lib/views/: home_screen.dart  play_screen.dart  vis_screen.dart
lib/widgets/: circle_vis.dart  fps_counter.dart  glass_button.dart  line_vis.dart  poly_vis.dart  progress_bar.dart  radial_vis.dart  vis_factory.dart
native/mp3_decoder/: CMakeLists.txt  mp3_decoder.c
test/: color_test.dart  fft_analyzer_service_test.dart  fft_test.dart  widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
